# rtcom-presence-ui

./: .gitignore  Makefile.am  configure.ac  rtcom-presence-ui.desktop
debian/: changelog  control  rtcom-presence-ui.install  rules
lib/: Makefile.am  pui-account-model.c  pui-account-model.h  pui-account-view.c  pui-account-view.h  pui-dbus.c  pui-dbus.h  pui-list-picker.c  pui-list-picker.h  pui-location.c  pui-location.h  pui-main-view.c  pui-main-view.h  pui-marshal.list  pui-master.c  pui-master.h  pui-module.c  pui-module.h  pui-profile-editor.c  pui-profile-editor.h  pui-profile.c  pui-profile.h
src/: Makefile.am  pui.c
xml/: presence-ui.xml
