SUBDIRS = lib

hildonstatusmenudesktopentry_DATA = rtcom-presence-ui.desktop
EXTRA_DIST = $(hildonstatusmenudesktopentry_DATA)

MAINTAINERCLEANFILES = Makefile.in configure compile config.guess	\
		       config.h.in config.h.in~ config.sub depcomp	\
		       install-sh ltmain.sh missing aclocal.m4
